@@ -5,13 +5,13 @@ function broadcast(text, type, channel)
 		outputChat("#ff0000You are Muted!", source, "System", type, 4)
 		return
 	end
-	if gameplayVariables["noadvert"] == true then
-	local Chunks = {(text:gsub("%s+", "")):match("(%d+)%.(%d+)%.(%d+)%.(%d+)")}
-    	if (#Chunks == 4) then
-     	banPlayer ( source, false, false, true, nil, "Don't advertise other servers, you got an 1-day ban for it now.", gameplayVariables["adBanTime"] )
+ 	if gameplayVariables["noadvert"] == true then
+		local Chunks = {(text:gsub("%s+", "")):match("(%d+)%.(%d+)%.(%d+)%.(%d+)")}
+      	if (#Chunks == 4) then
+			banPlayer ( source, false, false, true, nil, "Don't advertise other servers, you got an 1-day ban for it now.", gameplayVariables["adBanTime"] )
+		end
 	end
-   	end
-	if channel == 1 then
+  	if channel == 1 then
 		local theTime = getRealTime()
 		local hour = theTime.hour
 		local minute = theTime.minute
